# third_party_gptfdisk

./: BUILD.gn  OAT.xml  README.OpenSource  README.md  basicmbr.cc  bundle.json  diskio-unix.cc  diskio-windows.cc  gpt.cc  gptcl.cc  gptpart.cc  parttypes.cc  sgdisk.8  sgdisk.cc  support.cc
ohos/: ohos_fixparts.cpp  ohos_fixparts.h  ohos_mbr_helper.cpp  ohos_mbr_helper.h  ohos_partition_wiper.cpp
ohos/include/: ohos_partition_wiper.h
ohos/include/libpart/: libpart.h
ohos/src/libpart/: libpart.cpp
